code/sass/budget.scss
/* ... */
._BudgetProgressHUD {
  position: absolute;
  z-index: 4002;
  padding: 8px;
  ._icons {
    flex-grow: 0;
    @include icon-button();
    > div {
      display: inline-block;
      margin-top: 10px;
      margin-left: $icon-spacing;
    }
  }
  &:not(._expanded) {
    margin-top: -8px;
    > ._hudContent {
      width: 514px;
      @include backdrop-blur(4px, rgba(245,246,246,.94), rgba(245,246,246,.98));
      border: 8px solid transparent;
      vertical-align: middle;
      box-shadow: $drop-shadow;
      border-radius: 6px;
      > ._topRow {
        display: flex;
        flex-direction: row;
        > ._title {
          flex-grow: 1;
          margin-bottom: -8px;
          > ._field_name > div > ._content {
            font-size: 28px;
            color: black;
            font-weight: 200;
            &:not(:focus) {border: 2px solid transparent!important}
            background-color: transparent;
            height: auto;
            margin-bottom: 8px;
          }
          > ._field_name._account ._content {
            color: #3d993d;
          }
        }
      }
      > ._compare {
        margin-left: 4px;
        margin-bottom: -16px;
      }
      > ._month {
        margin-top: 20px;
        margin-bottom: -4px;
      }
      > ._year {
        margin-bottom: -4px;
      }
      ._graph_title {
        margin-top: 16px;
        margin-bottom: 4px;
        font-size: 16px;
        color: black;
        font-weight: 100;
      }
      > div {
        > ._monthTitle, > ._yearTitle {
          margin-bottom: -2px;
        }
      }
      > ._graph_title {
        margin-top: 4px;
        margin-left: 6px;
        color: #bfbfbf;
      }
      ._monthlyGraph {
        margin-top: 6px;
      }
      ._presenter {
        margin-top: -8px;
      }

      > ._group > ._presenter > ._MiniScheduleEntry {
        > ul > li {
          > ._field > div, > ._field {
            > ._content, ._suffix {
              font-size: 11px;
            }
            > label {
              margin-top: 0px;
              margin-bottom: 0px;
              border-top: 0px;
              border-bottom: 0px;
              > input {
                margin-top: 0px;
                margin-bottom: 4px;
              }
              > ._suffix {
                margin-top: 0px;
                margin-bottom: 2px;
              }
            }
          }
          > ._field:not(._field_notes) > div > ._content {
            color: #666;
          }
        }
        padding-bottom: 2px;
      }
    }
  }
  &._expanded {
    margin-top: -8px;
    > ._hudContent {
      @include backdrop-blur(4px, rgba(245,246,246,.94), rgba(245,246,246,.98));
      vertical-align: middle;
      box-shadow: $drop-shadow;
      border-radius: 6px;
      border: 8px solid transparent;
      padding: 8px;
      > ._topRow {
        margin-top: -8px;
        display: flex;
        flex-direction: row;
        > ._title {
          margin-left: 12px;
          font-size: 48px;
          color: #33b1ff;
          font-weight: 200;
          @include adaptive-width(330px, 410px, $expandedMiniScheduleThreshold);
          white-space: nowrap;
          text-overflow: ellipsis;
          overflow: hidden;
        }
        > ._filler {
          flex: 1;
        }
        > ._budgetTotal {
          font-size: 48px;
          color: #33b1ff;
          font-weight: 200;
        }
        > ._icons {
          width: 28px;
          display: flex;
          flex-direction: column;
        }

      }
      > ._topCaption {
        display: flex;
        flex-direction: row;
        justify-content: flex-end;
        > div {
          color: #33b1ff;
          font-weight: 200;
          font-size: 20px;
          margin-right: 32px;
          margin-top: -6px;
        }
      }

      > ._date {
        margin-left: 32px;
        margin-top: -94px;
        margin-bottom: 94px;
        font-size: 28px;
        font-weight: 200;
        color: #bbb;
      }

      > ._graphLine0 {
        display: flex;
        justify-content: center;
        margin-top: -70px;
        > ._graphContainer0 > ._filler {
          height: 44px;
        }
      }

      > ._graphLine1 {
        display: flex;
        justify-content: center;
        margin-top: 16px;
        margin-bottom: 16px;
        > ._monthsGraphContainer {
        }
      }

      > ._graphs {
        margin: 32px;
        margin-top: -76px;
        margin-bottom: 8px;
        display: flex;
        flex-direction: row;
        > ._progress {
          margin-right: 16px;
          flex: 1;
          @include adaptive-width(986px - 280px, 1138px - 260px, $expandedMiniScheduleThreshold);
          > ._graph_title {
            color: #777;
            font-size: 32px;
            font-weight: 300;
            &:not(:first-child) {
              margin-top: 16px;
            }
          }
        }
        > ._budget {
          flex: 0;
          width: 200px;
          margin-top: -30px;
          margin-bottom: -20px;
        }
      }
      > ._schedule > ._path {
        padding-left: 4px;
        margin-bottom: -16px;
        font-size: 24px;
        font-weight: 200;
        > span {
          padding-right: 12px;
          color: #bbb;
          &._pathElement:hover {
            color: #0081cc;
          }
        }
      }
    }
  }
}

._field {
  position: relative;
}

._toolTip, ._toolTipNoPosition {
  display: none;
  position: absolute;
  background: rgb(255,255,200);
  color: rgb(0,0,35)!important;
  &, * {
    font-size: 11px!important;
  }
  padding: 3px 6px;
  box-shadow:  0px 0px 2px rgba(0,0,0,.4);
  white-space: nowrap;
  z-index: 9999;
  &._toolTip {
    left: 8px;
    bottom: 24px;
  }
  &._twoTableTip {
    > table {
      border-collapse: collapse;
      > tbody > tr {
        > td:first-child {text-align: left}
        > td:last-child  {
          padding-left: 8px;
          text-align: right
        }
      }
    }
  }
}
/* ... */

